--- a/AboutMe.html
+++ b/AboutMe.html
@@ -8,17 +8,14 @@
     <link rel="stylesheet" type="text/css" href="webroot/css/paramagnon.css">   
 </head>
 <!-- End of header -->
-<body class ="desktop">
-    <div class ="sidebar">
-        <a class="active" href="/index.html">Home</a>
-        <a href="/News.html">News</a>
-        <a href="/Contact.html">Contact</a>
-        <a href="/AboutMe.html">About</a>
-    </div>
-    
 
+<div class ="sidebar">
+    <a href="/index.html">Home</a>    
+    <a href="/News.html">News</a>
+    <a href="/Contact.html">Contact</a>
+    <a class="active" href="/AboutMe.html">About</a>
+</div>
 
-</body>
 
 
 
