--- a/Contact.html
+++ b/Contact.html
@@ -10,12 +10,15 @@
 <!-- End of header -->
 
 <div class ="sidebar">
-    <a href="/index.html">Home</a>    
-    <a href="/News.html">News</a>
-    <a class="active" href="/Contact.html">Contact</a>
-    <a href="/AboutMe.html">About</a>
+    <a href="/index">Home</a>    
+    <a href="/News">News</a>
+    <a class="active" href="/Contact">Contact</a>
+    <a href="/AboutMe">About</a>
 </div>
 
+<div class ="content">
+    The content of this page is not finished
+</div>
 
 
 </html>
