--- a/index.html
+++ b/index.html
@@ -8,19 +8,17 @@
     <link rel="stylesheet" type="text/css" href="webroot/css/paramagnon.css">   
 </head>
 <!-- End of header -->
-<body class ="desktop">
-    <div class ="sidebar">
-        <a class="active" href="/index.html">Home</a>
-        <a href="/News.html">News</a>
-        <a href="/Contact.html">Contact</a>
-        <a href="/AboutMe.html">About</a>
-    </div>
-    
 
+<div class ="sidebar">
+    <a class="active" href="/index">Home</a>    
+    <a href="/News">News</a>
+    <a href="/Contact">Contact</a>
+    <a href="/AboutMe">About</a>
+</div>
 
-</body>
-
-
+<div class ="content">
+    The content of this page is not finished
+</div>
 
 
 </html>
