--- a/AboutMe.html
+++ b/AboutMe.html
@@ -10,13 +10,15 @@
 <!-- End of header -->
 
 <div class ="sidebar">
-    <a href="/index.html">Home</a>    
-    <a href="/News.html">News</a>
-    <a href="/Contact.html">Contact</a>
-    <a class="active" href="/AboutMe.html">About</a>
+    <a href="/index">Home</a>    
+    <a href="/News">News</a>
+    <a href="/Contact">Contact</a>
+    <a class="active" href="/AboutMe">About</a>
 </div>
 
-
+<div class ="content">
+    The content of this page is not finished
+</div>
 
 
 
