--- a/News.html
+++ b/News.html
@@ -10,12 +10,14 @@
 <!-- End of header -->
 
 <div class ="sidebar">
-    <a href="/index.html">Home</a>    
-    <a class="active" href="/News.html">News</a>
-    <a href="/Contact.html">Contact</a>
-    <a href="/AboutMe.html">About</a>
+    <a href="/index">Home</a>    
+    <a class="active" href="/News">News</a>
+    <a href="/Contact">Contact</a>
+    <a href="/AboutMe">About</a>
 </div>
 
-
+<div class ="content">
+    The content of this page is not finished
+</div>
 
 </html>
