--- a/News.html
+++ b/News.html
@@ -10,14 +10,17 @@
 <!-- End of header -->
 
 <div class ="sidebar">
-    <a href="/index">Home</a>    
-    <a class="active" href="/News">News</a>
-    <a href="/Contact">Contact</a>
-    <a href="/AboutMe">About</a>
+    <h1>Paramagnon</h1>
+    <a href="/index.html">Home</a>    
+    <a class="active" href="/News.html">News</a>
+    <a href="/Contact.html">Contact</a>
+    <a href="/AboutMe.html">About me</a>
+    <a href="/Projects.html">Projects</a>
 </div>
 
 <div class ="content">
-    The content of this page is not finished
+    <h1>News</h1>
+    <p>The content of this page is not finished </p>
 </div>
 
 </html>
