--- a/Projects.html
+++ b/Projects.html
@@ -14,15 +14,14 @@
     <a href="/index.html">Home</a>    
     <a href="/News.html">News</a>
     <a href="/Contact.html">Contact</a>
-    <a class="active" href="/AboutMe.html">About me</a>
-    <a href="/Projects.html">Projects</a>
+    <a href="/AboutMe.html">About me</a>
+    <a class="active" href="/Projects.html">Projects</a>
 </div>
 
 <div class ="content">
-    <h1>About me</h1>
-    <p>I am passionate about technology, and I am always fascinated to learn more about how different technologies work. In my free time I like spending time on making things. This website hosts the highlights of these projects with a description of the project, the process of creation, and links to their respective Github pages if available. </p>
+    <h1>Projects</h1>
+    <p>This page contains an overview of the different projects I have worked on and are available on Github. </p>
 </div>
-
 
 
 </html>
