Updated page structure

--- a/Projects/PCB_linear_actuator.html
+++ b/Projects/PCB_linear_actuator.html
@@ -21,15 +21,18 @@
         <a href="/Projects/3D_printer_LEDs.html">3D Printer LEDs</a>
         <a href="/Projects/Proxxon_MF70_CNC.html">Proxxon MF70 CNC</a>
         <a href="/Projects/Remote_PSU_control.html">Remote PSU control</a>
+        <a class ="active" href="/Projects/Motor_driver.html">Motor driver</a>
+        <a href="/Projects/PCB_linear_actuator.html">PCB linear actuator</a>
     </div>
-    <a class="active" href="/News.html">News</a>
+    <a href="/News.html">News</a>
     <a href="/AboutMe.html">About me</a>
-    <a href="/Contact.html">Contact</a>        
+    <a href="/Contact.html">Contact</a>    
 </div>
 
 <div class ="content">
-    <h1>News</h1>
-    <p>The content of this page is not finished </p>
+    <h1>Projects</h1>
+    <p>This page contains an overview of the different projects I have worked on and are available on Github. </p>
 </div>
+
 
 </html>
