--- a/Projects/Motor_driver.html
+++ b/Projects/Motor_driver.html
@@ -6,16 +6,27 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="webroot/css/paramagnon.css">   
+
+    <script src="webroot/js/script.js"></script>
 </head>
 <!-- End of header -->
 
 <div class ="sidebar">
     <h1>Paramagnon</h1>
     <a href="/index.html">Home</a>    
+    <button class="dropdown-btn">Projects
+        
+    </button>
+    <div class="dropdown-container">
+        <a href="/Projects/3D_printer_LEDs.html">3D Printer LEDs</a>
+        <a href="/Projects/Proxxon_MF70_CNC.html">Proxxon MF70 CNC</a>
+        <a href="/Projects/Remote_PSU_control.html">Remote PSU control</a>
+        <a class ="active" href="/Projects/Motor_driver.html">Motor driver</a>
+        <a href="/Projects/PCB_linear_actuator.html">PCB linear actuator</a>
+    </div>
     <a href="/News.html">News</a>
-    <a href="/Contact.html">Contact</a>
     <a href="/AboutMe.html">About me</a>
-    <a class="active" href="/Projects.html">Projects</a>
+    <a href="/Contact.html">Contact</a>    
 </div>
 
 <div class ="content">
